src/objects/NttDataEpa__External_Picklist__c.object
<CustomObject>
    <description>External values for integration picklists.</description>
    <fields>
        <fullName>NttDataEpa__External_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used for updates by Data Loader only.</description>
        <externalId>true</externalId>
        <inlineHelpText>Used for updates by Data Loader only.</inlineHelpText>
        <label>External Key</label>
        <length>9</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NttDataEpa__External_System__c</fullName>
        <label>External System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>COMPANY_CAR</fullName>
                </value>
                <value>
                    <fullName>MY_MERCEDES</fullName>
                </value>
                <value>
                    <fullName>SWT</fullName>
                </value>
                <value>
                    <fullName>SEGMENT_MASTER</fullName>
                </value>
                <value>
                    <fullName>DAW</fullName>
                </value>
                <value>
                    <fullName>GSSN</fullName>
                </value>
                <value>
                    <fullName>TOLERANT</fullName>
                </value>
                <value>
                    <fullName>CURRENTSFDC</fullName>
                </value>
                <value>
                    <fullName>MCARE</fullName>
                </value>
                <value>
                    <fullName>ACDB</fullName>
                </value>
                <value>
                    <fullName>DH</fullName>
                </value>
                <value>
                    <fullName>SPO</fullName>
                </value>
                <value>
                    <fullName>SARI</fullName>
                </value>
                <value>
                    <fullName>DM</fullName>
                </value>
                <value>
                    <fullName>JPOS</fullName>
                </value>
                <value>
                    <fullName>DSC</fullName>
                </value>
                <value>
                    <fullName>HUMAN</fullName>
                </value>
                <value>
                    <fullName>SFDC</fullName>
                </value>
                <value>
                    <fullName>EVENT_DATA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NttDataEpa__Integration_Picklist_External_Key__c</fullName>
        <formula>NttDataEpa__Integration_Picklist__r.NttDataEpa__External_Key__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Integration Picklist External Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NttDataEpa__Integration_Picklist__c</fullName>
        <label>Integration Picklist</label>
        <referenceTo>NttDataEpa__Integration_Picklist__c</referenceTo>
        <relationshipLabel>External Picklists</relationshipLabel>
        <relationshipName>External_Picklists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NttDataEpa__Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If multiple external picklist mappings are mapped to the same integration picklist, the one marked with this flag is taken when mapping from internal picklist to external picklist value.</description>
        <inlineHelpText>If multiple external picklist mappings are mapped to the same integration picklist, the one marked with this flag is taken when mapping from internal picklist to external picklist value.</inlineHelpText>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NttDataEpa__Organization__c</fullName>
        <description>The organization the external picklist value is valid for. (&apos;ALL&apos; makes the picklist value valid for all organizations.)</description>
        <inlineHelpText>The organization the external picklist value is valid for. (&apos;ALL&apos; makes the picklist value valid for all organizations.)</inlineHelpText>
        <label>Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NttDataEpa__Organization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NttDataEpa__Picklist_Mapping__c</fullName>
        <formula>NttDataEpa__Integration_Picklist__r.NttDataEpa__Picklist_Mapping__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Picklist Mapping</label>
        <type>Text</type>
    </fields>
    <label>External Picklist</label>
    <listViews>
        <fullName>NttDataEpa__All</fullName>
        <columns>NttDataEpa__Integration_Picklist__c</columns>
        <columns>NAME</columns>
        <columns>NttDataEpa__External_Key__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>External Value</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External Picklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>NttDataEpa__Validate_External_Key_Syntax</fullName>
        <active>true</active>
        <description>Check that the syntax of the External Key is correct.</description>
        <errorConditionFormula>NOT(BEGINS(NttDataEpa__External_Key__c, &apos;EP-&apos;)) || NOT(ISNUMBER( RIGHT(NttDataEpa__External_Key__c, 6)))</errorConditionFormula>
        <errorMessage>The syntax of the external key must match EP-{000000}.</errorMessage>
    </validationRules>
</CustomObject>